# aether-aws-ai-for-bharath

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pitch.md  Presentation_Prompt.md  Project_Summary.md  README.md  continue_git.sh  deploy.sh
api/: server.py
cloud/step_functions/: choking_triage.asl.json  daily_wellness.asl.json  (+4 more)
dashboard/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
demo/: demo_runner.py
edge/: pyproject.toml  test_all_modules.py
edge/edge/data/: events.db
edge/src/aether/: __init__.py
edge/src/aether/fusion/: __init__.py  fusion_engine.py
edge/src/aether/gateway/: __init__.py  edge_gateway.py  escalation_timer.py  event_queue.py  mqtt_bridge.py  privacy_filter.py
edge/src/aether/models/: __init__.py  schemas.py
edge/src/aether/safety/: __init__.py  cognitive_tracker.py  emotional_wellbeing.py  guardrails.py  health_decline.py  nutrition_tracker.py  respiratory_tracker.py  scam_detector.py  sleep_tracker.py
edge/src/aether/simulators/: __init__.py  acoustic_simulator.py  digital_twin.py  environmental_simulator.py  imu_simulator.py  medication_simulator.py  pose_simulator.py  smart_toilet_simulator.py  wifi_csi_simulator.py
edge/src/aether/voice/: checkin_dialogue.py  intent_classifier.py  synthesizer.py  transcriber.py  vad.py  voice_agent.py  wake_word.py
edge/tests/: __init__.py  test_checkin.py  test_fusion.py  test_gateway.py  test_guardrails.py  test_models.py  test_simulators.py  test_voice.py
infrastructure/: cdk.json  package.json
scripts/: seed_dynamodb.py
(+61 files in other folders)
