[project]
name = "aether-edge"
version = "0.1.0"
description = "AETHER Elderly Care System — Edge Gateway & Sensor Simulators"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34.0",
    "amazon-transcribe>=0.6.0",
]
voice = [
    "pvporcupine>=3.0.0",
    "pyaudio>=0.2.13",
    "sounddevice>=0.4.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
all = [
    "aether-edge[aws,voice,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
